--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   "dependencies": {
     "big-integer": "^1.6.48",
     "buffer": "^5.6.0",
-    "expo-random": "~12.1.2",
-    "js-sha256": "^0.9.0",
-    "react-native-unimodules": "^0.14.10"
+    "expo-crypto": "~12.4.1"
   },
   "devDependencies": {
     "mocha": "^9.1.3"
